# Rojgari_Backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  NEON_SETUP.md  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Rojgari_Backend/: settings.py  urls.py  views.py
accounts/: admin.py  apps.py  factories.py  managers.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  validators.py  views.py
accounts/api/: __init__.py  auth.py  bookings.py  categories.py  notifications.py  payments.py  requests.py  reviews.py  schemas.py  workers.py
accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py  0002_alter_user_phone_number.py  0003_pendingregistration.py  0004_alter_workerprofile_citizenship_back_and_more.py  0005_workerprofile_average_rating_and_more.py  0006_skill_workerprofile_has_selected_skills_and_more.py  0007_alter_skill_icon.py  0007_skill_display_order.py  0008_merge_0007_alter_skill_icon_0007_skill_display_order.py  0008_workerprofile_about_me_workerprofile_service_areas.py  0009_workerprofile_experience_document.py  0010_merge_20260715_1531.py  (+2 more)
bookings/: admin.py  models.py
docs/: api.http  api.md  architecture.md  database-schema.md  development.md  getting-started.md
notifications/: admin.py  models.py
payments/: admin.py  models.py
rojgari_backend/: asgi.py  settings.py  urls.py  wsgi.py
services/: admin.py  geocoding.py  matching.py  models.py  serializers.py  tests.py  urls.py  views.py
temp_backend/: asgi.py
(+15 files in other folders)
